# cmake-kernel

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  README_8md.html  aarch64_2arch_8cpp.html  aarch64_2arch_8cpp__incl.map  aarch64_2arch_8cpp__incl.md5  aarch64_2arch_8cpp_source.html  annotated.html  arch_8cpp.html  arch_8cpp__incl.map  arch_8cpp__incl.md5  arch_8cpp_source.html  arch_8h.html  arch_8h__dep__incl.map  arch_8h__dep__incl.md5  arch_8h__incl.map  arch_8h__incl.md5  arch_8h_source.html  boot_8h.html  boot_8h__incl.map  boot_8h__incl.md5  boot_8h_source.html  build_8md.html  classElf-members.html  classElf.html  classGraphics-members.html  classGraphics.html  classMemory-members.html  classMemory.html  classes.html  classostream-members.html  classostream.html  classostream_a271664830d4cda9da6c7c0b4c04a8ed2_icgraph.map  classostream_a271664830d4cda9da6c7c0b4c04a8ed2_icgraph.md5  classostream_afaa63ab1ab5310f2e4ccaeaf26a1d9f9_icgraph.map  classostream_afaa63ab1ab5310f2e4ccaeaf26a1d9f9_icgraph.md5  dir_000001_000003.html  dir_000002_000003.html  (+190 more)
.github/workflows/: build.yml  workflow.yml
cmake/: 3rd.cmake  add_header.cmake  clang.cmake  compile_config.cmake  functions.cmake  project_config.cmake  x86_64-riscv64-gcc.cmake  x86_64-x86_64-gcc.cmake
doc/: CMakeLists.txt  build.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+33 more)
src/: CMakeLists.txt  project_config.h
src/boot/: CMakeLists.txt  boot.cpp  graphics.cpp  load_elf.cpp  memory.cpp  ostream.cpp
src/boot/include/: boot.h  load_elf.h  ostream.hpp
src/kernel/: CMakeLists.txt  main.cpp
src/kernel/arch/: CMakeLists.txt
src/kernel/arch/aarch64/: arch.cpp
src/kernel/arch/include/: arch.h
src/kernel/arch/riscv64/: arch.cpp
src/kernel/driver/: CMakeLists.txt  driver.cpp
src/kernel/include/: kernel.h
src/kernel/libc/: CMakeLists.txt  libc.c
src/kernel/libcxx/: CMakeLists.txt  libcxx.cpp
test/: CMakeLists.txt
test/integration_test/: CMakeLists.txt  example.cpp
test/system_test/: CMakeLists.txt
test/system_test/gnu_efi_test/: CMakeLists.txt  boot.cpp  load_elf.cpp  main.cpp
test/system_test/opensbi_test/: CMakeLists.txt  boot.cpp
test/unit_test/: CMakeLists.txt  example.cpp
tools/: cppcheck-suppressions.xml  project_config.h.in
